--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@next/third-parties": "^16.0.3",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
@@ -19,10 +20,13 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
     "@react-three/postprocessing": "^3.0.4",
+    "@sentry/nextjs": "^10.25.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.81.1",
+    "@types/canvas-confetti": "^1.9.0",
     "@vercel/analytics": "^1.5.0",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -32,10 +36,13 @@
     "nanoid": "^5.1.6",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
+    "posthog-js": "^1.295.0",
+    "posthog-node": "^5.11.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
     "resend": "^6.4.2",
+    "sharp": "^0.34.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
@@ -48,6 +55,7 @@
     "@types/node": "^20.19.25",
     "@types/react": "^19.2.4",
     "@types/react-dom": "^19.2.3",
+    "@types/sharp": "^0.31.1",
     "@types/three": "^0.181.0",
     "autoprefixer": "^10.4.22",
     "babel-plugin-react-compiler": "1.0.0",
